Minor changes, added new figure for both analytical models

--- a/cite.bib
+++ b/cite.bib
@@ -675,3 +675,73 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  year = {2019}
 }
 
+@article{Ivezic:2008,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2008SerAJ.176....1I},
+ author = {{Ivezic}, Z. and {Axelrod}, T. and {Brandt}, W.~N. and {Burke}, D.~L. and
+{Claver}, C.~F. and {Connolly}, A. and {Cook}, K.~H. and {Gee}, P. and
+{Gilmore}, D.~K. and {Jacoby}, S.~H.},
+ doi = {10.2298/SAJ0876001I},
+ journal = {Serbian Astronomical Journal},
+ keywords = {Astronomical data bases: miscellaneous, Atlases, Catalogs, Surveys, Solar system: general, Stars: general, Galaxy: general, Galaxies: general, Cosmology: miscellaneous},
+ month = {Jun},
+ pages = {1-13},
+ title = {{Large Synoptic Survey Telescope: From Science Drivers To Reference Design}},
+ volume = {176},
+ year = {2008}
+}
+
+@article{Laureijs:2011,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2011arXiv1110.3193L},
+ archiveprefix = {arXiv},
+ author = {{Laureijs}, R. and {Amiaux}, J. and {Arduini}, S. and
+{Augu{\`e}res}, J. -L. and {Brinchmann}, J. and {Cole}, R. and
+{Cropper}, M. and {Dabin}, C. and {Duvet}, L. and {Ealet}, A.},
+ eid = {arXiv:1110.3193},
+ eprint = {1110.3193},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics},
+ month = {Oct},
+ pages = {arXiv:1110.3193},
+ primaryclass = {astro-ph.CO},
+ title = {{Euclid Definition Study Report}},
+ year = {2011}
+}
+
+@article{Troxel:2015,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2015PhR...558....1T},
+ archiveprefix = {arXiv},
+ author = {{Troxel}, M.~A. and {Ishak}, Mustapha},
+ doi = {10.1016/j.physrep.2014.11.001},
+ eprint = {1407.6990},
+ journal = {\physrep},
+ keywords = {Weak gravitational lensing, Intrinsic alignment, Cosmology, Large-scale structure, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
+ month = {Feb},
+ pages = {1-59},
+ primaryclass = {astro-ph.CO},
+ title = {{The intrinsic alignment of galaxies and its impact on weak gravitational lensing in an era of precision cosmology}},
+ volume = {558},
+ year = {2015}
+}
+
+@article{Wright:2018,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2018arXiv181206077W},
+ archiveprefix = {arXiv},
+ author = {{Wright}, Angus H. and {Hildebrandt}, Hendrik and {Kuijken}, Konrad and
+{Erben}, Thomas and {Blake}, Robert and {Buddelmeijer}, Hugo and
+{Choi}, Ami and {Cross}, Nicholas and {de Jong}, Jelte T.~A. and
+{Edge}, Alastair},
+ eid = {arXiv:1812.06077},
+ eprint = {1812.06077},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+ month = {Dec},
+ pages = {arXiv:1812.06077},
+ primaryclass = {astro-ph.CO},
+ title = {{KiDS+VIKING-450: A new combined optical \&amp; near-IR dataset for cosmology and astrophysics}},
+ year = {2018}
+}
+
