--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -100,7 +100,7 @@ Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford H
 The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the Standard Model of Cosmology and to determine its parameters. Contrary to the analysis of the Cosmic Microwave Background (CMB) by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model of cosmology. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalisation of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
 It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
-For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[compare][hereafter H17]{2017MNRAS.465.1454H}. With next-generation surveys like the Large Synoptic Survey Telescope\citep{Ivezic:2008} and Euclid\citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
+For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[compare][hereafter H17]{2017MNRAS.465.1454H}. With next-generation surveys like the Large Synoptic Survey Telescope \citep{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
 To check for remaining systematics, a weak lensing signal can be divided into two components, the so-called E- and B-modes \citep{2002ApJ...568...20C,2002A&A...389..729S}. To leading order, B-modes can not be created by astrophysical phenomena and are thus an excellent test for remaining systematics. Note that the non-existence of B-modes does not necessarily imply that the sample is free of remaining systematics.
 
@@ -269,27 +269,28 @@ We want to apply both methods to data from the KiDS+VIKING-450 (KV450) survey \c
 W_n \propto \la z_n \ra ^{0.85}\, ,
 \]
 where $\la z_n\ra$ is the average redshift of percentile $n$. As a second method we define \[
-W_n \propto \la\gamma_{\rm{t}}\gamma_{\rm{t}}\ra (\theta') + \la \gamma_\times\gamma_\times\ra (\theta') = \sqrt{\xi_{+,nn}^{ij}(\theta')}\, ,
+W_n \propto \sqrt{ \la\gamma_{\rm{t}}\gamma_{\rm{t}}\ra (\theta') + \la \gamma_\times\gamma_\times\ra (\theta')} = \sqrt{\xi_{+,nn}^{ij}(\theta')}\, ,
 \]
 \todo{Maybe we set $W_n\propto \sqrt[4]{\la \gamma_t\gamma_t\ra^2 + \la \gamma_\times\gamma_\times\ra^2 } \propto \sqrt[4]{\xi_+^2 + \xi_-^2}$?}
 where the $\xi_{+,nn}^{ij}(\theta')$ denotes the model correlation function defined in Sect. \ref{sec:xipm_semianalytic}, evaluated at a characteristic scale $\theta'$.
 
 While the first method suffers from the fact that the power-law index is redshift-dependent, the second method is sensitive to the angular range $\theta$, at which the shear correlation functions are evaluated, which is completely arbitrary.
 
-We applied both analytic methods and the semianalytic one to data from the KV450 survey, following the separation into tomographic bins as in H18, and computed the ratio of observed and modeled correlation functions.\todo{Probably I should include some more specifications of the KV450 survey here?} Furthermore, we conducted numerical simulations investigating the same issue: A $100\,\rm{deg}^2$ field in the Scinet Light Cone Simulations (SLICS) \citep{2018MNRAS.481.1337H} was randomly separated into 10 percentiles. For each tomographic redshift bin of each percentile, galaxies were placed to trace the respective redshift distribution. Afterwards, their expected shear was determined (shape-noise in the form of intrinsic ellipticities of galaxies was not included). This was compared to a set of simulations where the galaxies were simply distributed according to the combined redshift distribution of each respective tomographic bin\todo{Catherine, I feel like I am grossly oversimplifying what you did. Maybe you could write a short paragraph about the simulations?}. As in H18, we have separated the data in 5 tomographic redshift bins and performed our analysis for a cross-correlation of all bins. The result can be seen in Fig.~\ref{fig:all_xis}.
+We applied both analytic methods and the semianalytic one to data from the KV450 survey, following the separation into tomographic bins as in H18, and computed the ratio of observed and modeled correlation functions.\todo{Probably I should include some more specifications of the KV450 survey here?} Furthermore, we conducted numerical simulations investigating the same issue: A $100\,\rm{deg}^2$ field in the Scinet Light Cone Simulations (SLICS) \citep{2018MNRAS.481.1337H} was randomly separated into 10 percentiles. For each tomographic redshift bin of each percentile, galaxies were placed to trace the respective redshift distribution. Afterwards, their expected shear was determined (shape-noise in the form of intrinsic ellipticities of galaxies was not included). This was compared to a set of simulations where the galaxies were simply distributed according to the combined redshift distribution of each respective tomographic bin\todo{Catherine, I feel like I am grossly oversimplifying what you did. Maybe you could write a short paragraph about the simulations?}. The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure}
 	\centering
-	\includegraphics[width=1\textwidth]{images/allxis_0111.pdf}
-	\caption{The ratio of observed to modelled correlation functions for the analytic method (green), the semi-analytic method (blue) and the numerical simulations (red) for a cross-correlation of all redshift bins. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$.}
+	\includegraphics[width=1\textwidth]{images/xis_all.pdf}
+	\caption{The ratio of observed to modelled correlation functions for the analytic methods (green), the semi-analytic method (blue) and the numerical simulations (red) for a cross-correlation of all redshift bins. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. For the characteristic scale $\theta'$ of the second analytic method we chose $\theta' = 0.\! '5$.}
 	\label{fig:all_xis}
 	\end{figure}
-We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.\todo{Should I include the plot number density vs average redshift from the talk? Maybe in the appendix to avoid too many Figures?}\footnote{We also observe that in the semi-analytic model, $\xi_-$ seems to be much stronger affected by this effect: Following Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
+%We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
+We observe that for high redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to sufficiently describe the effect for low redshift bins. The second analytic method, however, matches the semi-analytic one for all $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change.\todo{Should I include the plot number density vs average redshift from the talk? Maybe in the appendix to avoid too many Figures?}\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
 
-The simulations seem to be in rough agreement with the models, but there are some significant differences. After a thorough analysis we explain these discrepancies the following way: The simulations were performed on a $100\,\rm{deg}^2$ field, which means that shot-noise of the fields plays a significant role. After performing the same simulations for a different distribution of depth between the pointings and obtaining completely different results, we are quite certain that this is the dominating effect. The implications of this and possible mitigation strategies will be discussed in Section \ref{sec:discussion}.
-
-Calculating the correction for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependency on the cosmology, which can be observed in Figure \ref{fig:comparecosmo}.
+The simulations seem to be in rough agreement with the models, but there are some significant differences. After a thorough analysis we explain these discrepancies the following way: The simulations were performed on a $100\,\rm{deg}^2$ field, which means that shot-noise of the fields plays a significant role. After performing the same simulations for a different distribution of depth between the pointings and obtaining completely different results, we are quite certain that this is the dominating effect. The implications of this and possible mitigation strategies will be discussed in Sect.~\ref{sec:discussion}.
 
 As the next step we computed a reference correlation function given a fiducial cosmology for each combination of redshift bins, and modified said correlation function according to our semi-analytic model. Then we ran a Markov-Chain Monte Carlo simulation\footnote{The code for this was developed by Jan-Luca van den Busch and used in a modified version.} to check for a potential bias in the cosmological parameters, using the covariance-matrix computed in \citet{2017MNRAS.465.1454H}. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restricted our analysis to those two parameters. As can be seen in Figure \ref{fig:mcmc_kids}, the impact of varying depth is noticeable, but insignificant compared to the uncertainties. However, to get a rough estimate for the impact on a Euclid-like survey, we divided the used covariance-matrix by 30, to account for the increased survey area. As can be seen in Figure \ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant, however it seems that the parameter $S_8$ is extremely robust against this effect.
+
+Calculating the correction for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependency on the cosmology, which can be observed in Figure \ref{fig:comparecosmo}. However, as for the computation of the correction we need to calculate 165 correlation functions, we did not yet account for that in our MCMC analysis.
 
 To estimate the B-Modes created by this effect, we have extracted the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} (COSEBIS, compare \citet{2010A&A...520A.116S}), once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then for the correlation functions that have been modified to account for a varying depth. We report a consistent B-Mode pattern across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. We also note that the difference in E-Modes is as large as the B-Modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-Modes.
 
@@ -308,26 +309,26 @@ With our semi-analytic model we try to describe the impacts of varying depth in 
 \begin{enumerate}
 \item In the most general terms, we are analysing the effects of a position-based selection function on cosmic shear surveys. In our analysis, this selection function was governed by the $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing, whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
 
-\item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the shot noise of the depth-distribution. We have assumed that the probability that a neighbouring pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, Figure \ref{fig:all_xis} clearly shows that it is not valid for a $100\,\rm{deg}^2$ field. Whether our assumption holds true for the $450\,\rm{deg}^2$ footprint of the KV450 survey, or even the $1350\,\rm{deg}^2$ footprint of the final survey is an important question. Also, we have assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
+\item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the shot noise of the depth-distribution. We have assumed that the probability that a neighbouring pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, Figure \ref{fig:all_xis} clearly shows that it is not valid for a $100\,\rm{deg}^2$ field. Whether our assumption holds true for the $450\,\rm{deg}^2$ footprint of the KV450 survey, or even the $1350\,\rm{deg}^2$ footprint of the final survey, is an important question. Also, we have assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
 
 A strategy for the mitigation of finite field effects, boundaries and a correlated distribution of depth is given in Appendix \ref{sec:expand_eoftheta}. We find that finite field effects are not significant for a $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$-field, if the distribution of depth is uncorrelated.
 
 \item In our MCMC simulations we did not account for degeneracies with other cosmological parameters
 % (apart from $\Omega_{\rm m}, \sigma_8, w_0$ and $w_a$)
- or observational effects. Especially intrinsic alignments and baryonic feedback also modify the correlation functions especially on small scales, so they are probably degenerate with the effect of varying depth. In an actual MCMC simulation that accounts for these effects, we suspect that the parameters for intrinsic alignments and baryonic feedback change to mitigate this effect, and the impact on cosmological parameters is actually smaller than in our results. Also, possible degeneracies between $S_8$ and other cosmological parameters might bias the resulting values. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
+ or observational effects. Especially intrinsic alignments and baryonic feedback also modify the correlation functions especially on small scales, so they are probably degenerate with the effect of varying depth \citep{Troxel:2015}. In an actual MCMC simulation that accounts for these effects, we suspect that the parameters for intrinsic alignments and baryonic feedback change to mitigate this effect, and the impact on cosmological parameters is actually smaller than in our results. Also, possible degeneracies between $S_8$ and other cosmological parameters might bias the resulting values. %Furthermore, when including the effects of dark energy we notice that our observation of $S_8$ being constant is no longer valid: For a `Euclid-like' survey we notice a bias of $\sim 0.8\sigma$. This gives rise to the assumption that the results of an MCMC with the full parameter space, including observational effects, will differ from our results. 
 \end{enumerate}
 
 Despite these repercussions, we are confident to say that the effects of varying depth are not significant for the KV450 survey. The cosmological parameters did not change significantly and the main parameter, $S_8$, is especially robust against this effect. In particular this means that a varying depth can not explain the discrepancy between observations of the local Universe and results from analysis of the CMB.
 
-We have shown that this effect can create B-modes. However, \citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are at least one order of magnitude larger and still consistent with zero, so it is safe to say that the modes created by varying depth are negligible. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Figure \ref{fig:cosebis_eandb}). This means that as soon as this effect causes significant biases in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
+We have shown that this effect can create B-modes. However, \citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are at least one order of magnitude larger and still consistent with zero, so it is safe to say that the modes created by varying depth are negligible. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Figure \ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
 
 For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
 
-While the cosmology dependency (compare Fig. \ref{fig:comparecosmo}) is not significant for the KV450 survey, it will be relevant for the Euclid survey. In that case, a calculation of the correction for this effect is necessary for every cosmology in the MCMC simulation, underlining the necessity for a fast, analytic model.
+While the cosmology dependency (compare Fig. \ref{fig:comparecosmo}) is not significant for the KV450 survey, it will be relevant for the Euclid survey. In that case, a calculation of the correction for this effect is necessary for every cosmology in the MCMC simulation, underlining the necessity for a fast, analytic model. \todo{For that example I took value from the 95\% CL of KV450 from H18. As the parameter constraints in Euclid are going to be much tighter, this is probably no longer true...}
 
 %As an outlook it would be interesting to perform a full MCMC simulation, including both cosmological and nuisance parameters. One might also check the most popular extensions to the standard model of cosmology, and see whether varying depth could cause a bias towards one of these models. Furthermore, the method developed in Appendix \ref{sec:expand_eoftheta} could be applied to the actual footprint of the KV450 survey to see whether finite field effects or a correlated distribution of $r$-band depth are significant.
 Additionally is interesting to note that $E(\theta)$ is the azimuthal average of the function $E(\b\theta)$, which is not isotropic. Therefore, it would be possible to observe a direction-dependent correlation function $\xi_\pm^{ij,\rm{obs}}(\b\theta)$ in future surveys. An anisotropy in the observed correlation function could be a sign for the influence of varying depth.
-\todo{Should we give an outlook?}
+\todo{Should we give an outlook? I.e. calculate covariances (I am trying to come up with something for that), apply to real KV450 footprint, ...}
 
 %--------------------------------------------------------------------
 
